fixed header/font contrast issue in quinn flavors (6)

--- a/sites/all/themes/openscholar/scholar_quinn/flavors/blue/blue.css
+++ b/sites/all/themes/openscholar/scholar_quinn/flavors/blue/blue.css
@@ -6,6 +6,10 @@ h2.title {
   color: #ae3d3d;
   }
 
+  .sidebar h3.title {
+  color: #FFF;
+  }
+
 #sidebar-first a,
 #sidebar-first a:visited,
 #sidebar-second a,
@@ -47,3 +51,7 @@ h2.title {
   -webkit-text-shadow: none;
   text-shadow: none;
   }
+  
+.term-head {
+color: #DDD;
+}
