--- a/sites/all/themes/openscholar/scholar_quinn/flavors/dark_grey/dark_grey.css
+++ b/sites/all/themes/openscholar/scholar_quinn/flavors/dark_grey/dark_grey.css
@@ -5,6 +5,10 @@ html,body {
 h2.title {
   color: #ae3d3d;
   }
+  
+  .sidebar h3.title {
+  color: #FFF;
+  }
 
 #sidebar-first a,
 #sidebar-first a:visited,
@@ -47,3 +51,7 @@ h2.title {
   -webkit-text-shadow: none;
   text-shadow: none;
   }
+  
+.term-head {
+color: #DDD;
+}
