--- a/sites/all/themes/openscholar/scholar_quinn/flavors/green/green.css
+++ b/sites/all/themes/openscholar/scholar_quinn/flavors/green/green.css
@@ -38,3 +38,7 @@ h2, h2.title {
   color: #444;
   background: #D7E07B;
   }
+  
+.term-head {
+color: #DDD;
+}
